gccida/c1/find_reloads
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2928:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v31; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2931:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v34; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2932:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v35; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2941:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2941:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2943:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v46; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2947:6: error: use of undeclared identifier 'v50'
rtx *v50; // rsi 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2966:4: error: expected ';' after expression
rtx v69; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2966:5: error: use of undeclared identifier 'v69'
rtx v69; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2988:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v91; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2996:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v99; // r11d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2998:4: error: expected ';' after expression
rtx dummy_reload; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:2998:5: error: use of undeclared identifier 'dummy_reload'
rtx dummy_reload; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:3021:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *v124; // rax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:3029:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v132; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:3038:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:3038:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:3039:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v142; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/reload.c:3040:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v143; // eax 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads/src/obj/reload.o] Error 1
